fix opacity on mobile

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -128,6 +128,8 @@ form.absolute {
     width: 100%;
     opacity: 1;
   }
+
+  #header { opacity: 1; filter: none; }
 }
 
 input, textarea {
